[tool.poetry]
name = "wandb-rl-plot"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gql = {git = "https://github.com/wandb/client", rev = "andrew/report-editing"}
click = "^8.1.3"
requests = "^2.27.1"
sentry-sdk = "^1.5.12"
shortuuid = "^1.0.9"
python-dateutil = "^2.8.2"
google-api-python-client = "^2.49.0"
psutil = "^5.9.1"
pathtools = "^0.1.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
